# Licenta

./: .gitignore  README.md  app_GUI.py  main.py  plotter.py  pyproject.toml
algorithms/kmeans_clustering/: gpu_acceleration.py  kmeans_kernels.cu  multi_thread.py  single_thread.py
algorithms/matrix_multiplication/: gpu_acceleration.py  multi_thread.py  single_thread.py
algorithms/radix_sort/: gpu_acceleration.py  multi_threaded.py  optimised_radix_sort.py  radix_sort_gpu.cu  simple_radix_sort.cu  single_threaded.py
constants/: params.py  string_constants.py
performance_profiling/: get_system_info.py  utils.py
performance_profiling/kmeans_clustering/: profile_kmeans_all.py
performance_profiling/matrix_multiplication/: cpu_multi_threaded_prof.py  cpu_single_threaded_prof.py  gpu_acceleration_prof.py  matrix_generation.py  profile_matrix_mult_all.py
performance_profiling/radix_sort/: array_generation.py  cpu_multi_threaded_prof.py  cpu_single_threaded_prof.py  gpu_acceleration_prof.py  optimised_cpu_single_threaded_prof.py  profile_radix_sort_all.py
utils/: utils.py
visualizations/: plotter.py
